<resources>
    <string name="app_name">Frankiapp for Yoigo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fibra_300">FIJO + FIBRA 300Mb SIMETRICA</string>
    <string name="fibra_50">FIJO + FIBRA 50Mb o ADSL 20Mb</string>
    <string name="tarifa_cero">LA DEL CERO 1,5 GB</string>
    <string name="tarifa_cinco">LA DEL CERO 5 GB</string>
    <string name="tarifa_infinita">LA INFINITA 5 GB</string>
    <string name="combinada_naranja">COMBINADA NARANJA</string>
    <string name="combinada_verde">COMBINADA VERDE</string>
    <string name="combinada_morada">COMBINADA MORADA</string>
    <string name="combinada_azul">COMBINADA AZUL</string>
    <string name="combinada_naranja300">COMBINADA NARANJA 300Mb</string>
    <string name="combinada_verde300">COMBINADA VERDE 300Mb</string>
    <string name="combinada_morada300">COMBINADA MORADA 300Mb</string>
    <string name="combinada_azul300">COMBINADA AZUL 300Mb</string>
    <string name="combinada_naranja50">COMBINADA NARANJA 50/20Mb</string>
    <string name="combinada_verde50">COMBINADA VERDE 50/20Mb</string>
    <string name="combinada_morada50">COMBINADA MORADA 50/20Mb</string>
    <string name="combinada_azul50">COMBINADA AZUL 50/20Mb</string>
    <string name="tarifa_sinfin">LA SINFÍN 25 GB</string>
    <string name="tarifa_uno">LA DEL UNO 1 GB</string>
    <string name="tarifa_650">LA DEL UNO 650 MB</string>
    <string name="pago_unico_prepago">Pago unico prepago</string>
    <string name="pago_unico_contrato">Pago unico contrato</string>
</resources>
