<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="@dimen/margin_tarifa">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_tarifas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/ln_pago_unico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_tarifa"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ln_pago_unico_prepago"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4"
                    android:background="@color/color_pago_unico"
                    android:orientation="vertical"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/tv_etiqueta_prepago"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/pago_unico_prepago"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <LinearLayout
                            android:id="@+id/ln_pago_unico_uno"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/background_cero"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <com.appcloud.frankiappforyoigo.AutoResizeTextView
                                android:id="@+id/tv_tarifa_prepago_uno"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:maxLines="1"
                                android:text="@string/tarifa_uno"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tv_pago_unico_uno"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="-"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ln_pago_unico_650"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/background_cinco"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <com.appcloud.frankiappforyoigo.AutoResizeTextView
                                android:id="@+id/tv_tarifa_prepago_650"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:maxLines="1"
                                android:text="@string/tarifa_650"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tv_pago_unico_650"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="-"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />
                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ln_pago_unico_contrato"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7"
                    android:background="@drawable/border_pago_unico"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tv_etiqueta_contrato"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/pago_unico_contrato"
                        android:textColor="@color/color_pago_unico"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <LinearLayout
                            android:id="@+id/ln_pago_unico_cero"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/background_cero"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <com.appcloud.frankiappforyoigo.AutoResizeTextView
                                android:id="@+id/tv_tarifa_contrato_cero"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:maxLines="1"
                                android:text="@string/tarifa_cero"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tv_pago_unico_cero"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="-"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ln_pago_unico_cinco"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/background_cinco"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <com.appcloud.frankiappforyoigo.AutoResizeTextView
                                android:id="@+id/tv_tarifa_contrato_cinco"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:maxLines="1"
                                android:text="@string/tarifa_cinco"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tv_pago_unico_cinco"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="-"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />
                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <LinearLayout
                            android:id="@+id/ln_pago_unico_infinita"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/background_infinita"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <com.appcloud.frankiappforyoigo.AutoResizeTextView
                                android:id="@+id/tv_tarifa_contrato_infinita"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:maxLines="1"
                                android:text="@string/tarifa_infinita"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tv_pago_unico_infinita"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="-"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/ln_pago_unico_sinfin"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/background_sinfin"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <com.appcloud.frankiappforyoigo.AutoResizeTextView
                                android:id="@+id/tv_tarifa_contrato_sinfin"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:maxLines="1"
                                android:text="@string/tarifa_sinfin"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tv_pago_unico_sinfin"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="-"
                                android:textColor="@android:color/white"
                                android:textSize="14sp" />
                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
